syntax = "proto3";

package tango.iceconfig;

message GetRequest {}

message GetResponse {
  message ICEServer {
    optional string credential = 1;
    optional string username = 2;
    repeated string urls = 3;
  }
  repeated ICEServer ice_servers = 1;
}

message GetLegacyRequest {}

message GetLegacyResponse { repeated string ice_servers = 1; }
